--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,12 +3,14 @@
     <color name="colorPrimary">#E35183</color>
     <color name="colorPrimaryVariant">#C4416E</color>
     <color name="colorPrimaryDark">#AD1557</color>
-    <color name="colorPrimaryLight">#FF84B2</color>
+    <color name="colorPrimaryLight">#1FE35183</color>
     <color name="colorAccent">#FFd54F</color>
     <color name="colorAccentVariant">#ffEB3B</color>
 
     <color name="colorError">#FF1744</color>
-    <color name="colorSurface">#212121</color>
+    <color name="colorWarning">#ffb74d</color>
+    <color name="colorSuccess">#00e676</color>
+    <color name="colorSurface">#323232</color>
     <color name="colorBackground">#212121</color>
     <color name="dividerColor">#80616161</color>
 
