--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,13 +3,15 @@
     <color name="colorPrimary">#AD1457</color>
     <color name="colorPrimaryVariant">#880E4F</color>
     <color name="colorPrimaryDark">#78002E</color>
-    <color name="colorPrimaryLight">#E35183</color>
+    <color name="colorPrimaryLight">#1FAD1457</color>
     <color name="colorAccent">#FFC400</color>
     <color name="colorAccentVariant">#FFAB00</color>
 
     <color name="colorError">#B00020</color>
+    <color name="colorWarning">#FFAB00</color>
+    <color name="colorSuccess">#43a047</color>
     <color name="colorSurface">#FFFFFF</color>
-    <color name="colorBackground">#FAFAFA</color>
+    <color name="colorBackground">#F7F7F7</color>
     <color name="dividerColor">#DFE1E5</color>
 
     <color name="colorOnPrimary">#FFFFFF</color>
