--- a/app/src/main/res/values/type.xml
+++ b/app/src/main/res/values/type.xml
@@ -3,25 +3,35 @@
 
     <style name="TextAppearance.AppTheme.Headline1" parent="TextAppearance.MaterialComponents.Headline1">
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="fontFamily">@font/rubik</item>
     </style>
 
     <style name="TextAppearance.AppTheme.Headline2" parent="TextAppearance.MaterialComponents.Headline2">
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="fontFamily">@font/rubik</item>
     </style>
 
     <style name="TextAppearance.AppTheme.Headline3" parent="TextAppearance.MaterialComponents.Headline3">
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="fontFamily">@font/rubik</item>
     </style>
 
     <style name="TextAppearance.AppTheme.Headline4" parent="TextAppearance.MaterialComponents.Headline4">
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="fontFamily">@font/rubik</item>
     </style>
 
     <style name="TextAppearance.AppTheme.Headline5" parent="TextAppearance.MaterialComponents.Headline5">
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="fontFamily">@font/rubik</item>
     </style>
 
     <style name="TextAppearance.AppTheme.Headline6" parent="TextAppearance.MaterialComponents.Headline6">
         <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="fontFamily">@font/rubik</item>
+    </style>
+
+    <style name="TextAppearance.AppTheme.Rubik" parent="TextAppearance.MaterialComponents.Subtitle1">
+        <item name="fontFamily">@font/rubik</item>
     </style>
 </resources>
