--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,7 +14,7 @@
     <color name="colorBackground">#F7F7F7</color>
     <color name="dividerColor">#DFE1E5</color>
 
-    <color name="colorOnPrimary">#FFFFFF</color>
+    <color name="colorOnPrimary">#DE000000</color>
     <color name="colorOnSecondary">#DE000000</color>
     <color name="colorOnBackground">#DE000000</color>
     <color name="colorOnSurface">#DE000000</color>
