--- a/app/src/main/res/layout/report_card.xml
+++ b/app/src/main/res/layout/report_card.xml
@@ -2,9 +2,11 @@
 <com.google.android.material.card.MaterialCardView
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/reportCard"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <LinearLayout
+        style="@style/SelectableItemBackground"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
