--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#E35183</color>
-    <color name="colorPrimaryVariant">#C4416E</color>
+    <color name="colorPrimaryVariant">#181818</color>
     <color name="colorPrimaryDark">#AD1557</color>
     <color name="colorPrimaryLight">#1FE35183</color>
     <color name="colorAccent">#FFd54F</color>
